fix notes col and overflow

--- a/src/styles/note.module.scss
+++ b/src/styles/note.module.scss
@@ -11,6 +11,7 @@
         padding: 10px;
         border-radius: 8px;
         color: #fff;
+        word-wrap: break-word;
     }
     span {
         position: absolute;
